--- a/tmux.conf
+++ b/tmux.conf
@@ -145,7 +145,7 @@ set -g message-bg colour235
 set -g visual-activity on
 
 # 快捷调整窗口分割到全屏
-unbind m
-bind m new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
-unbind n
-bind n last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
+#unbind m
+#bind m new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
+#unbind n
+#bind n last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
