--- a/tmux.conf
+++ b/tmux.conf
@@ -113,29 +113,31 @@ set -g pane-active-border-fg colour232
 
 # statusbar
 set -g status-justify centre
-set -g status-bg colour235
-set -g status-fg colour248
+set -g status-bg black
+set -g status-fg white
 set -g status-attr dim
 #[default]» #[fg=colour187]#S #[default]• #[fg=colour187]w#I.p#P#[default]"
-#set -g status-left "
+set -g status-left "#[bg=black,fg=green][#[fg=cyan]#S#[fg=green]]"
 set -g status-left-attr bright
 set -g status-left-length 20
 #[fg=colour174]#(/home/xiaodong/bin/uptime) #[default]• #[fg=colour174]#(cut -d ' ' -f 1-3 /proc/loadavg)"
-#set -g status-right "
+#set -g status-right "#[fg=cyan]%d %b %R"
 set -g status-right-attr bright
 set -g status-right-length 80
 
+setw -g window-status-format '#[dim]#I:#[default]#W#[fg=grey,dim]'
 setw -g window-status-current-fg colour223
 setw -g window-status-current-bg colour237
-setw -g window-status-current-attr bold
-setw -g window-status-current-format "#I:#W#F"
+setw -g window-status-current-attr bright
+setw -g window-status-current-format "#[fg=cyan,bold]#I#[fg=blue]:#[fg=cyan]#W#[fg=dim]"
 
-#setw -g window-status-alert-attr bold
-#setw -g window-status-alert-fg colour255
-#setw -g window-status-alert-bg colour160
+# setw -g window-status-alert-attr dim
+# setw -g window-status-alert-fg colour255
+# setw -g window-status-alert-bg colour160
 
 # messages
 set -g message-attr bold
+set -g message-attr bright
 set -g message-fg colour223
 set -g message-bg colour235
 set -g visual-activity on
@@ -145,3 +147,4 @@ set -g visual-activity on
 #bind m new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
 #unbind n
 #bind n last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
+#
