--- a/tmux.conf
+++ b/tmux.conf
@@ -117,11 +117,13 @@ set -g status-bg black
 set -g status-fg white
 set -g status-attr dim
 #[default]» #[fg=colour187]#S #[default]• #[fg=colour187]w#I.p#P#[default]"
-set -g status-left "#[bg=black,fg=green][#[fg=cyan]#S#[fg=green]]"
+#set -g status-left "#[bg=black,fg=green][#[fg=cyan]#S#[fg=green]]"
+set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
 set -g status-left-attr bright
 set -g status-left-length 20
 #[fg=colour174]#(/home/xiaodong/bin/uptime) #[default]• #[fg=colour174]#(cut -d ' ' -f 1-3 /proc/loadavg)"
 #set -g status-right "#[fg=cyan]%d %b %R"
+set -g status-right "#h #[fg=cyan]%Y-%m-%d %H:%M"
 set -g status-right-attr bright
 set -g status-right-length 80
 
